clusters/common/apps/monitoring/app/helmrelease-prometheus.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: keiretsu
  hostnames:
    - "prometheus.${LOCATION}.${COMMON_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prometheus
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
